review ready kdf135

--- a/artifacts/acvp_sub_kdf135_ikev1.html
+++ b/artifacts/acvp_sub_kdf135_ikev1.html
@@ -399,8 +399,8 @@
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-ikev1-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
-  <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification." />
-  <meta name="description" content="This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification." />
+  <meta name="dct.abstract" content="This document defines the JSON schema for using the SP800-135 IKEv1 KDF algorithm with the ACVP specification." />
+  <meta name="description" content="This document defines the JSON schema for using the SP800-135 IKEv1 KDF algorithm with the ACVP specification." />
 
 </head>
 
@@ -436,7 +436,7 @@
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification.</p>
+<p>This document defines the JSON schema for using the SP800-135 IKEv1 KDF algorithm with the ACVP specification.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -536,14 +536,21 @@
       <td class="left">initiator</td>
       <td class="left">Minimum and maximum lengths in bytes</td>
       <td class="left">array</td>
-      <td class="left">0-65536</td>
+      <td class="left">64-2048</td>
       <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">responder</td>
       <td class="left">Minimum and maximum lengths in bytes</td>
       <td class="left">array</td>
-      <td class="left">0-65536</td>
+      <td class="left">64-2048</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">dhkey</td>
+      <td class="left">Three Diffie-Hellman shared secret key lengths in bits</td>
+      <td class="left">array</td>
+      <td class="left">0-8192</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -555,7 +562,7 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -639,7 +646,7 @@
     </tr>
     <tr>
       <td class="left">gxylen</td>
-      <td class="left">Diffie-Hellman shared secret length</td>
+      <td class="left">Diffie-Hellman shared secret length in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -835,7 +842,7 @@
 		"methods" : ["pke", "pskey"],
 		"initiator" : [64, 2048],
 		"responder" : [64, 2048],
-		"sha" : ["SHA-1", "SHA-256", SHA-384", SHA-512"],
+		"sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"],
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
