--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -396,7 +396,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-snmp-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 SNMP KDF algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SP800-135 SNMP KDF algorithms with the ACVP specification." />
@@ -430,7 +430,7 @@
   </table>
 
   <p class="title">ACVP SNMP Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-snmp-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -520,12 +520,12 @@
       <td class="left">plen</td>
       <td class="left">SNMP: Password minimum and maximum lengths</td>
       <td class="left">array</td>
-      <td class="left">alphanumeric</td>
-      <td class="left">Yes</td>
+      <td class="left">value</td>
+      <td class="left">No</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -567,7 +567,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
+      <td class="left">SNMP</td>
       <td class="left">value</td>
     </tr>
     <tr>
