--- a/artifacts/acvp_sub_kdf135_tpm.html
+++ b/artifacts/acvp_sub_kdf135_tpm.html
@@ -378,7 +378,6 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported SP800-135 KDF Algorithms"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Capabilities for each KDF Algorithm"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -397,7 +396,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-tpm-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 TPM KDF algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SP800-135 TPM KDF algorithms with the ACVP specification." />
@@ -431,7 +430,7 @@
   </table>
 
   <p class="title">ACVP TPM Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-tpm-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -459,7 +458,6 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Supported SP800-135 KDF Algorithms</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Capabilities for each KDF Algorithm</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -509,18 +507,18 @@
       <td class="left">The HMAC validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">shaval</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -535,45 +533,10 @@
   <li>SNMP</li>
   <li>TPM</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#capex_data" id="capex_data">Capabilities for each KDF Algorithm</a></h1>
-<p id="rfc.section.2.2.p.1">The following table describes the SP800-135 KDF TPM JSON elements of the Test Group JSON object.</p>
-<div id="rfc.table.2"/>
-<div id="caps_table7"/>
-<table cellpadding="3" cellspacing="0" class="tt full center">
-  <caption>Capabilities Exchange JSON Object</caption>
-  <thead>
-    <tr>
-      <th class="left">JSON Value</th>
-      <th class="left">Description</th>
-      <th class="left">JSON type</th>
-      <th class="left">Optional</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="left">algorithm</td>
-      <td class="left">TLS</td>
-      <td class="left">value</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left">hmacval</td>
-      <td class="left">The HMAC validation number or implemented in same implementation</td>
-      <td class="left">value</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left">shaval</td>
-      <td class="left">The SHA validation number or implemented in same implementation</td>
-      <td class="left">value</td>
-      <td class="left">No</td>
-    </tr>
-  </tbody>
-</table>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual Key Derivation Function (KDF), such as SNMP, SSH,  etc.  This section describes the JSON schema for a test vector set used with SP800-135 KDF algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.3"/>
+<div id="rfc.table.2"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
@@ -597,7 +560,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
+      <td class="left">TPM</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -610,7 +573,7 @@
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for TPM is as follows:</p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.3"/>
 <div id="vs_tg_table8"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Group JSON Object</caption>
@@ -633,7 +596,7 @@
 </table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each SP800-135 KDF TPM test vector.</p>
-<div id="rfc.table.5"/>
+<div id="rfc.table.4"/>
 <div id="vs_tc_table8"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -674,7 +637,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.6"/>
+<div id="rfc.table.5"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -704,7 +667,7 @@
   </tbody>
 </table>
 <p id="rfc.section.4.p.2">The following table describes the JSON object that represents a vector set response for TPM.</p>
-<div id="rfc.table.7"/>
+<div id="rfc.table.6"/>
 <div id="vr_top_table8"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
