--- a/artifacts/acvp_sub_kdf135_x963.html
+++ b/artifacts/acvp_sub_kdf135_x963.html
@@ -396,10 +396,10 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-ansx9.63-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-ansx963-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
-  <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification." />
-  <meta name="description" content="This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification." />
+  <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 ANS X9.63 KDF algorithms with the ACVP specification." />
+  <meta name="description" content="This document defines the JSON schema for using SP800-135 ANS X9.63 KDF algorithms with the ACVP specification." />
 
 </head>
 
@@ -430,12 +430,12 @@
   </table>
 
   <p class="title">ACVP ANS X9.63 Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-ansx9.63-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-ansx963-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document defines the JSON schema for using SP800-135 KDF algorithms with the ACVP specification.</p>
+<p>This document defines the JSON schema for using SP800-135 ANS X9.63 KDF algorithms with the ACVP specification.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -507,39 +507,39 @@
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">sha</td>
       <td class="left">SHA functions supported</td>
       <td class="left">array</td>
-      <td class="left">SHA-1, SHA-224, SHA-256, SHA-384, SHA-512</td>
-      <td class="left">Yes</td>
+      <td class="left">SHA-224, SHA-256, SHA-384, SHA-512</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">keylen</td>
       <td class="left">Key length minimum and maximum</td>
       <td class="left">array</td>
-      <td class="left">0-65536</td>
-      <td class="left">Yes</td>
+      <td class="left">128-4096</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">field</td>
       <td class="left">ANSI X9.63: Minimum and Maximum field size in </td>
       <td class="left">array</td>
-      <td class="left">0-65536</td>
-      <td class="left">Yes</td>
+      <td class="left">224-571</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">sharedinfo</td>
       <td class="left">ANSI X9.63: Minimum and Maximum sharedinfo size in bits</td>
       <td class="left">array</td>
       <td class="left">0-1024</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
