--- a/artifacts/acvp_sub_kdf135_srtp.html
+++ b/artifacts/acvp_sub_kdf135_srtp.html
@@ -378,7 +378,7 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported SP800-135 KDF Algorithms"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported SP800-135 KDF Methodss"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported SP800-135 KDF Methods"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -397,7 +397,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-srtp-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 SRTP KDF algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SP800-135 SRTP KDF algorithms with the ACVP specification." />
@@ -431,7 +431,7 @@
   </table>
 
   <p class="title">ACVP SRTP Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-srtp-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -459,7 +459,7 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Supported SP800-135 KDF Algorithms</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Supported SP800-135 KDF Methodss</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">Supported SP800-135 KDF Methods</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -506,35 +506,35 @@
     </tr>
     <tr>
       <td class="left">aesval</td>
-      <td class="left">The AES validation number or implemented in same implementation(SRTP)</td>
+      <td class="left">The AES validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">methods</td>
       <td class="left">Type of method or algorithm supported</td>
       <td class="left">array</td>
       <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">kdr0</td>
-      <td class="left">SRTP: Key Derivation Rate 0</td>
+      <td class="left">Key Derivation Rate 0</td>
       <td class="left">array</td>
       <td class="left">all, 1-24</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">kdr1</td>
-      <td class="left">SRTP: Key Derivation Rate 1</td>
+      <td class="left">Key Derivation Rate 1</td>
       <td class="left">array</td>
       <td class="left">all, 1-24</td>
-      <td class="left">Yes</td>
+      <td class="left">No</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
 <p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
@@ -549,7 +549,7 @@
   <li>SNMP</li>
   <li>TPM</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-135 KDF Methodss</a></h1>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-135 KDF Methods</a></h1>
 <p id="rfc.section.2.2.p.1">The following SP800-135 KDF methods may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
@@ -585,7 +585,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
+      <td class="left">SRTP</td>
       <td class="left">value</td>
     </tr>
     <tr>
