placeholder for KDF108

--- a/artifacts/acvp_sub_kdf108.html
+++ b/artifacts/acvp_sub_kdf108.html
@@ -548,7 +548,7 @@
     </tr>
     <tr>
       <td class="left">L</td>
-      <td class="left">Length in bits of Ko keying material, 2 lengths evenly divisible by h, 2 that are not</td>
+      <td class="left">Length in bits of Ko keying material, 2 lengths evenly divisible by h, and if supported 2 that are not</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">No</td>
@@ -562,7 +562,7 @@
     </tr>
     <tr>
       <td class="left">order</td>
-      <td class="left">Order of fixed input data, elect all lengths of r in bits</td>
+      <td class="left">Order of fixed input data</td>
       <td class="left">array</td>
       <td class="left">before, middle, after</td>
       <td class="left">No</td>
@@ -577,7 +577,7 @@
 <ul>
   <li>counterMode</li>
   <li>feedbackMode</li>
-  <li>pipelineIterationMode</li>
+  <li>doublePipelineIterationMode</li>
 </ul>
 <h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-108 KDF Methods</a></h1>
 <p id="rfc.section.2.2.p.1">The following SP800-108 KDF methods may be advertised by the ACVP compliant crypto module:</p>
@@ -655,7 +655,7 @@
     </tr>
     <tr>
       <td class="left">prf</td>
-      <td class="left">HMAC or CMAC being used</td>
+      <td class="left">Psuedorandom function HMAC or CMAC used</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -702,7 +702,7 @@
     </tr>
     <tr>
       <td class="left">L</td>
-      <td class="left">Minimum and maximum lengths of Ko keying material</td>
+      <td class="left">Length of Ko keying material</td>
       <td class="left">array</td>
       <td class="left">No</td>
     </tr>
@@ -770,7 +770,7 @@
     </tr>
     <tr>
       <td class="left">KO</td>
-      <td class="left">KDF output</td>
+      <td class="left">The derived keying material output</td>
       <td class="left">value</td>
     </tr>
   </tbody>
