updating dhkey definition

--- a/artifacts/acvp_sub_kdf135_ikev1.html
+++ b/artifacts/acvp_sub_kdf135_ikev1.html
@@ -526,13 +526,6 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">sha</td>
-      <td class="left">SHA functions supported</td>
-      <td class="left">array</td>
-      <td class="left">SHA-1, SHA-224, SHA-256, SHA-384, SHA-512</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
       <td class="left">initiator</td>
       <td class="left">Minimum and maximum lengths in bytes</td>
       <td class="left">array</td>
@@ -548,9 +541,16 @@
     </tr>
     <tr>
       <td class="left">dhkey</td>
-      <td class="left">Three Diffie-Hellman shared secret key lengths in bits</td>
+      <td class="left">Array of up to three Diffie-Hellman shared secret key lengths in bits and array of SHA sizes supported for the each length</td>
       <td class="left">array</td>
       <td class="left">0-8192</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">sha</td>
+      <td class="left">Array of SHA functions supported for each DH key</td>
+      <td class="left">array</td>
+      <td class="left">SHA-1, SHA-224, SHA-256, SHA-384, SHA-512</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -842,7 +842,14 @@
 		"methods" : ["pke", "pskey"],
 		"initiator" : [64, 2048],
 		"responder" : [64, 2048],
-		"sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"],
+		"dhkey" : [
+			    {"length" : 224,
+			     "sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"]},
+			    {"length" : 1024,
+			     "sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"]},
+			    {"length" : 8192,
+			     "sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"]},
+                          ]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
