--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -5,7 +5,7 @@
 <head profile="http://www.w3.org/2006/03/hcard http://dublincore.org/documents/2008/08/04/dc-html/">
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
 
-  <title>ACVP DSA Algorithm JSON Specification</title>
+  <title>ACVP DSA2 Algorithm JSON Specification</title>
 
   <style type="text/css" title="Xml2Rfc (sans serif)">
   /*<![CDATA[*/
@@ -399,8 +399,8 @@
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdsa-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
-  <meta name="dct.abstract" content="This document defines the JSON schema for using DSA algorithms with the ACVP specification." />
-  <meta name="description" content="This document defines the JSON schema for using DSA algorithms with the ACVP specification." />
+  <meta name="dct.abstract" content="This document defines the JSON schema for using DSA2 algorithms with the ACVP specification." />
+  <meta name="description" content="This document defines the JSON schema for using DSA2 algorithms with the ACVP specification." />
 
 </head>
 
@@ -430,13 +430,13 @@
     </tbody>
   </table>
 
-  <p class="title">ACVP DSA Algorithm JSON Specification<br />
+  <p class="title">ACVP DSA2 Algorithm JSON Specification<br />
   <span class="filename">draft-ietf-acvp-subdsa-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document defines the JSON schema for using DSA algorithms with the ACVP specification.</p>
+<p>This document defines the JSON schema for using DSA2 algorithms with the ACVP specification.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
@@ -602,7 +602,7 @@
   <li>SHA-512-256</li>
 </ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
-<p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual DSA functionc.  This section describes the JSON schema for a test vector set used with DSA2 algorithms.</p>
+<p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual DSA2 function.  This section describes the JSON schema for a test vector set used with DSA2 algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.  </p>
 <div id="rfc.table.2"/>
 <div id="vs_top_table"/>
