DRAFT RSA: KeyGen only

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -682,7 +682,7 @@
       <td class="left">modListProvPrime</td>
       <td class="left">supported RSA moduli for provable prime generation - see <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2</td>
       <td class="left">array</td>
-      <td class="left">any non-empty subset of {2048, 3072, 4096}</td>
+      <td class="left">{2048, 3072, 4096}</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -696,7 +696,7 @@
       <td class="left">hashListProvPrime</td>
       <td class="left">supported hash algorithms for provable prime generation - see <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2</td>
       <td class="left">array</td>
-      <td class="left">any non-empty subset of {SHA1, SHA224, SHA256, SHA384, SHA512, SHA512/224, SHA512/256}</td>
+      <td class="left">{SHA1, SHA224, SHA256, SHA384, SHA512, SHA512/224, SHA512/256}</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
