--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -399,7 +399,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-8-12" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-8-19" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -420,10 +420,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">August 12, 2016</td>
+  <td class="right">August 19, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: February 13, 2017</td>
+  <td class="left">Expires: February 20, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -444,7 +444,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 13, 2017.</p>
+<p>This Internet-Draft will expire on February 20, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -479,7 +479,7 @@
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing NIST-approved DRBG algorithms from SP 800-90A <a href="#SP800-90A">[SP800-90A]</a> using ACVP. See also <a href="#DRBGVS">[DRBGVS]</a> </p>
+<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing NIST-approved DRBG algorithms from SP 800-90A <a href="#SP800-90A">[SP800-90A]</a> using ACVP. </p>
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Requirements Language</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.1.2"><a href="#rfc.section.1.2">1.2.</a> <a href="#defaults_def" id="defaults_def">Default values</a></h1>
@@ -1172,12 +1172,6 @@
         <b id="ACVP">[ACVP]</b>
       </td>
       <td class="top"><a title="NIST">authSurName, authInitials.</a>, "<a>ACVP Specification</a>", 2016.</td>
-    </tr>
-    <tr>
-      <td class="reference">
-        <b id="DRBGVS">[DRBGVS]</b>
-      </td>
-      <td class="top"><a title="NIST">Keller, S.</a> and <a title="NIST">T. Hall</a>, "<a href="http://csrc.nist.gov/groups/STM/cavp/documents/drbg/DRBGVS.pdf">The NIST SP 800-90A Deterministic Random Bit Generator Validation SYSTEM (DRBGVS)</a>", October 2015.</td>
     </tr>
     <tr>
       <td class="reference">
